--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "Js dev environment built, based upon the Pluralsight course by Cory House",
   "scripts": {
+    "lint": "esw webpack.config.* src scripts --color",
+    "lint:watch": "npm run lint -- --watch",
     "prestart": "babel-node scripts/startupMessage.js",
-    "start": "npm-run-all --parallel security-check serve",
+    "start": "npm-run-all --parallel security-check serve lint:watch",
     "serve": "babel-node scripts/server.js",
     "security-check": "nsp check"
   },
