--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "test:watch": "npm run test -- --watch",
     "generate-mock-data": "babel-node scripts/genMockData",
     "prestart-mock-api": "npm run generate-mock-data",
-    "start-mock-api": "json-server --watch src/api/db.json --port 8089"
+    "start-mock-api": "json-server --watch src/api/db.json --port 8089",
+    "clean-dist": "rimraf ./dist && mkdir dist",
+    "prebuild": "npm-run-all clean-dist test lint",
+    "build": "babel-node scripts/build.js",
+    "postbuild": "babel-node scripts/distServer.js" 
   },
   "author": "Johannes Lindgren",
   "license": "MIT",
