--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clean-dist": "rimraf ./dist && mkdir dist",
     "prebuild": "npm-run-all clean-dist test lint",
     "build": "babel-node scripts/build.js",
-    "postbuild": "babel-node scripts/distServer.js" 
+    "postbuild": "babel-node scripts/distServer.js"
   },
   "author": "Johannes Lindgren",
   "license": "MIT",
@@ -25,11 +25,11 @@
     "whatwg-fetch": "1.0.0"
   },
   "devDependencies": {
-    "babel-cli": "6.16.0",
-    "babel-core": "6.17.0",
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
     "babel-loader": "6.2.5",
-    "babel-preset-latest": "6.16.0",
-    "babel-register": "6.16.3",
+    "babel-preset-env": "1.6.1",
+    "babel-register": "6.26.0",
     "chai": "3.5.0",
     "chalk": "1.1.3",
     "cheerio": "0.22.0",
