--- a/package.json
+++ b/package.json
@@ -36,16 +36,16 @@
     "compression": "1.7.2",
     "cross-env": "5.1.3",
     "css-loader": "0.25.0",
-    "eslint": "3.8.1",
-    "eslint-plugin-import": "2.0.1",
-    "eslint-watch": "2.1.14",
+    "eslint": "4.18.2",
+    "eslint-plugin-import": "2.9.0",
+    "eslint-watch": "3.1.3",
     "express": "4.14.0",
     "extract-text-webpack-plugin": "1.0.1",
     "html-webpack-plugin": "2.22.0",
     "jsdom": "9.8.0",
     "json-schema-faker": "0.3.6",
     "json-server": "0.8.22",
-    "mocha": "5.0.3",
+    "mocha": "^5.0.4",
     "nock": "8.1.0",
     "npm-run-all": "3.1.1",
     "nsp": "2.6.2",
