--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "jsdom": "9.8.0",
     "json-schema-faker": "0.3.6",
     "json-server": "0.8.22",
-    "mocha": "^5.0.4",
+    "mocha": "5.0.4",
     "nock": "8.1.0",
     "npm-run-all": "3.1.1",
     "nsp": "2.6.2",
