--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
     "babel-register": "6.26.0",
     "chai": "4.1.2",
     "chalk": "2.3.2",
-    "cheerio": "0.22.0",
+    "cheerio": "1.0.0-rc.2",
     "compression": "1.7.2",
     "cross-env": "5.1.3",
     "css-loader": "0.25.0",
     "eslint": "4.18.2",
     "eslint-plugin-import": "2.9.0",
     "eslint-watch": "3.1.3",
-    "express": "4.14.0",
+    "express": "4.16.2",
     "extract-text-webpack-plugin": "1.0.1",
     "html-webpack-plugin": "2.22.0",
     "jsdom": "9.8.0",
