--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
     "express": "4.16.2",
     "extract-text-webpack-plugin": "1.0.1",
     "html-webpack-plugin": "2.22.0",
-    "jsdom": "9.8.0",
-    "json-schema-faker": "0.3.6",
-    "json-server": "0.8.22",
+    "jsdom": "11.6.2",
+    "json-schema-faker": "0.5.0-rc13",
+    "json-server": "0.12.1",
     "mocha": "5.0.4",
-    "nock": "8.1.0",
+    "nock": "9.2.3",
     "npm-run-all": "3.1.1",
     "nsp": "2.6.2",
     "open": "0.0.5",
