--- a/package.json
+++ b/package.json
@@ -4,18 +4,16 @@
   "description": "Js dev environment based upon Pluralsight course by Cory House",
   "scripts": {
     "prestart": "babel-node scripts/startupMessage.js",
-    "start": "npm-run-all --parallel security-check open:src lint:watch test:watch start-mock-api",
-    "lint": "esw webpack.config.* src scripts --color",
+    "start": "npm-run-all --parallel open:src lint:watch test:watch start-mock-api",
+    "lint": "esw src --color",
     "lint:watch": "npm run lint -- --watch",
     "open:src": "babel-node scripts/server.js",
-    "security-check": "nsp check",
     "test": "mocha --reporter progress scripts/testSetup.js \"src/**/*.test.js\"",
     "test:watch": "npm run test -- --watch",
     "generate-mock-data": "babel-node scripts/genMockData",
     "prestart-mock-api": "npm run generate-mock-data",
     "start-mock-api": "json-server --watch src/api/db.json --port 8089",
-    "clean-dist": "rimraf ./dist && mkdir dist",
-    "prebuild": "npm-run-all clean-dist test lint",
+    "prebuild": "npm-run-all test lint",
     "build": "babel-node scripts/build.js",
     "postbuild": "babel-node scripts/distServer.js"
   },
@@ -25,36 +23,36 @@
     "whatwg-fetch": "1.0.0"
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.0",
-    "babel-loader": "6.2.5",
-    "babel-preset-env": "1.6.1",
-    "babel-register": "6.26.0",
-    "chai": "4.1.2",
-    "chalk": "2.3.2",
-    "cheerio": "1.0.0-rc.2",
-    "compression": "1.7.2",
-    "cross-env": "5.1.3",
-    "css-loader": "0.25.0",
-    "eslint": "4.18.2",
-    "eslint-plugin-import": "2.9.0",
-    "eslint-watch": "3.1.3",
-    "express": "4.16.2",
-    "extract-text-webpack-plugin": "1.0.1",
-    "html-webpack-plugin": "2.22.0",
-    "jsdom": "11.6.2",
-    "json-schema-faker": "0.5.0-rc13",
-    "json-server": "0.12.1",
-    "mocha": "5.0.4",
-    "nock": "9.2.3",
-    "npm-run-all": "4.1.2",
-    "nsp": "3.2.1",
-    "open": "0.0.5",
-    "rimraf": "2.6.2",
-    "style-loader": "0.13.1",
-    "webpack": "1.13.2",
-    "webpack-dev-middleware": "1.8.4",
-    "webpack-hot-middleware": "2.13.0",
-    "webpack-md5-hash": "0.0.5"
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
+    "chalk": "^2.3.2",
+    "cheerio": "^1.0.0-rc.2",
+    "compression": "^1.7.3",
+    "cross-env": "^5.2.0",
+    "css-loader": "^1.0.0",
+    "eslint": "^5.3.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-watch": "^4.0.2",
+    "express": "^4.16.3",
+    "mini-css-extract-plugin":"^0.4.1",
+    "html-webpack-plugin": "3.2.0",
+    "jsdom": "^11.12.0",
+    "json-schema-faker": "^0.5.0-rc15",
+    "json-server": "^0.14.0",
+    "mocha": "^5.2.0",
+    "nock": "^9.4.4",
+    "npm-run-all": "^4.1.3",
+    "open": "^0.0.5",
+    "rimraf": "^2.6.2",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.16.5",
+    "webpack-clean-plugin": "^0.2.3",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.3"
   }
 }
