--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "js-dev-environment",
+  "name": "funcs",
   "version": "1.0.0",
-  "description": "Js dev environment based upon Pluralsight course by Cory House",
+  "description": "A library of functions",
   "scripts": {
     "prestart": "babel-node scripts/startupMessage.js",
     "start": "npm-run-all --parallel open:src lint:watch test:watch start-mock-api",
@@ -20,39 +20,38 @@
   "author": "Johannes Lindgren",
   "license": "MIT",
   "dependencies": {
-    "whatwg-fetch": "1.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.5",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
-    "chai": "^4.1.2",
-    "chalk": "^2.3.2",
-    "cheerio": "^1.0.0-rc.2",
-    "compression": "^1.7.3",
-    "cross-env": "^5.2.0",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.3.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-watch": "^4.0.2",
-    "express": "^4.16.3",
-    "mini-css-extract-plugin":"^0.4.1",
-    "html-webpack-plugin": "3.2.0",
-    "jsdom": "^11.12.0",
-    "json-schema-faker": "^0.5.0-rc15",
-    "json-server": "^0.14.0",
-    "mocha": "^5.2.0",
-    "nock": "^9.4.4",
-    "npm-run-all": "^4.1.3",
-    "open": "^0.0.5",
-    "rimraf": "^2.6.2",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.16.5",
+    "chai": "^4.2.0",
+    "chalk": "^4.0.0",
+    "cheerio": "^1.0.0-rc.3",
+    "compression": "^1.7.4",
+    "cross-env": "^7.0.2",
+    "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-watch": "^6.0.1",
+    "express": "^4.17.1",
+    "mini-css-extract-plugin": "^0.9.0",
+    "html-webpack-plugin": "^4.0.4",
+    "jsdom": "^16.2.2",
+    "json-schema-faker": "^0.5.0-rcv.24",
+    "json-server": "^0.16.1",
+    "mocha": "^7.1.1",
+    "nock": "^12.0.3",
+    "npm-run-all": "^4.1.5",
+    "open": "^7.0.3",
+    "rimraf": "^3.0.2",
+    "style-loader": "^1.1.3",
+    "webpack": "^4.42.1",
     "webpack-clean-plugin": "^0.2.3",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.3"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0"
   }
 }
