--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
   "author": "Johannes Lindgren",
   "license": "MIT",
   "dependencies": {
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/node": "^7.8.7",
     "babel-loader": "^8.1.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.26.0",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/register": "^7.9.0",
     "chai": "^4.2.0",
     "chalk": "^4.0.0",
     "cheerio": "^1.0.0-rc.3",
